--- a/.github/workflows/stable-image.yml
+++ b/.github/workflows/stable-image.yml
@@ -30,6 +30,8 @@ jobs:
     steps:
       - name: Checkout 
         uses: actions/checkout@v3
+        with:
+          submodules: 'true'
       - name: Login to GHCR
         uses: docker/login-action@v1
         with:
