--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,15 @@
 services:
   jakobjdev:
     container_name: jakobjdev
-    image: "ghcr.io/jakobottar/jakobjdev:stable"
+    image: "containous/whoami"
     labels:
-      - traefik.http.routers.jakobjdev.rule=Path(`/hugo`)
+      - traefik.enable=true
+      - traefik.http.routers.jakobjdev.rule=Host(`jakobj.dev`)
+      - traefik.http.routers.jakobjdev.entrypoints=web
+      - traefik.http.services.jakobjdev.loadbalancer.server.port=4001
+    networks:
+      - default
+
     restart: unless-stopped
     ports:
       - 4001:80
@@ -11,8 +17,9 @@ services:
     container_name: traefik
     image: traefik:latest
     restart: unless-stopped 
-    command: --api.insecure=false --providers.docker --configFile=/config/traefik.yml
-
+    command: --api.insecure=true --configFile=/config/traefik.yml
+    networks:
+      - default
     ports:
       - 80:80
       - 443:443
@@ -30,10 +37,10 @@ services:
       # - /ssd/app/traefik/acme.json:/acme.json
       # - /etc/localtime:/etc/localtime:ro
 
-    labels:
-      - traefik.enable=true
-      # - traefik.http.routers.api.rule=Host(`tr.{{ domain }}`)
-      # - traefik.http.routers.api.entrypoints=https
+    # labels:
+      # - traefik.enable=true
+      # - traefik.http.routers.api.rule=Path(`/dashboard`)
+      # - traefik.http.routers.api.entrypoints=web
       # - traefik.http.routers.api.tls.certresolver=default
       # - traefik.http.routers.api.service=api@internal
       # - traefik.http.routers.api.middlewares=auth
