--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,7 @@
+networks:
+  web:
+
+
 services:
   jakobjdev:
     container_name: jakobjdev
@@ -5,42 +9,25 @@ services:
     labels:
       - traefik.enable=true
       - traefik.http.routers.jakobjdev.rule=Host(`jakobj.dev`)
-      - traefik.http.routers.jakobjdev.entrypoints=web
-      - traefik.http.services.jakobjdev.loadbalancer.server.port=4001
+      - traefik.http.routers.jakobjdev.entrypoints=websecure
+      - traefik.http.services.jakobjdev.loadbalancer.server.port=8080
+      - traefik.http.routers.jakobjdev.tls.certresolver=mycerts
     networks:
-      - default
-
+      - web
     restart: unless-stopped
-    ports:
-      - 4001:80
+
   traefik:
     container_name: traefik
     image: traefik:latest
     restart: unless-stopped
     command: --api.insecure=true --configFile=/config/traefik.yml
     networks:
-      - default
+      - web
     ports:
       - 80:80
       - 443:443
-      # environment:
-      # - CF_API_EMAIL=${CF_API_EMAIL}
-      # - CF_DNS_API_TOKEN=${CF_DNS_API_TOKEN}
-      # - CF_ZONE_API_TOKEN=${CF_ZONE_API_TOKEN}
 
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./traefik.yml:/config/traefik.yml
-      # - /ssd/app/traefik/traefik.yml:/traefik.yml
-      # - /ssd/app/traefik/dynamic_conf.yml:/dynamic_conf.yml
-      # - /ssd/app/traefik/acme.json:/acme.json
-      # - /etc/localtime:/etc/localtime:ro
-
-      # labels:
-      # - traefik.enable=true
-      # - traefik.http.routers.api.rule=Path(`/dashboard`)
-      # - traefik.http.routers.api.entrypoints=web
-      # - traefik.http.routers.api.tls.certresolver=default
-      # - traefik.http.routers.api.service=api@internal
-      # - traefik.http.routers.api.middlewares=auth
-      # - traefik.http.middlewares.auth.basicauth.users=${TRAEFIK_USERS}
+      - ./acme.json:/acme.json # must be 600 permissions
