--- a/config.yml
+++ b/config.yml
@@ -51,7 +51,7 @@ params:
   
 
   assets:
-    favicon: "/favicon.ico"
-    favicon16x16: "/favicon-16x16.png"
-    favicon32x32: "/favicon-32x32.png"
+    favicon: "/skier.ico"
+    favicon16x16: "/skier-16x16.png"
+    favicon32x32: "/skier-32x32.png"
 
